# news_project

./: pyproject.toml  run.py
migrations/versions/: 71ffb7d0f02f_cascade_option.py
news_project/: __init__.py  admin.py  app.db  decorators.py  email.py  errors.py  forms.py  models.py  routes.py  token.py
news_project/static/: admin.css  main.css
news_project/templates/: 404.html  500.html  activate.html  comment_email.html  create_post.html  home.html  layout.html  post.html  register.html
news_project/templates/admin/: index.html
tests/: test_news_project.py
